Added Language Servuce

--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+  </ItemGroup>
+
 </Project>
